
Features under a numbered section are complete and available in the Wrest gem.

== 1.0.1
 * GH#61 Option propogate while converting uri to UriTemplate and back.
 * GH#64 Removed Caching.
 * GH#32 Callback for response status codes.

== 1.0.0
 * GH#56 Detailed Net::HTTP debug output option added to Wrest::Native:Request.
 * GH#60 Wrest debug log arrow direction changed to be consistent with Net::HTPP debug log
 * GH#59 follow_redirects_limit is off by one
 * GH#24 Add support for xpath based filtering of xml response bodies to the response chain
 * GH#46 Response.deserialise for Json responses
 * GH#52 Wrest console (bin/wrest) fails on 1.9.2
 * GH#55 Fix connection.verify_mode for Net::HTTP https connection to VERIFY_PEER
 * GH#57 Feature #24 doesn't autoload correctly
== 1.0.0.beta7
 * GH#46 Response.deserialise for Json responses

== 1.0.0.beta6
 * GH#35 Wrest::UriTemplate extensions swallow existing path
 * GH#41 Make Hash core_ext opt out
 
== 1.0.0.beta5
 * GH#30 Replace rails app in spec/sample_rails_app with a lighter sinatra app
 * GH#37 Allow opting out of Adding to_uri to string

== 1.0.0.beta4
 * GH#34 Wrest::Uri extensions swallow existing path
 
== 1.0.0.beta3
 * GH#13 Works for get and delete with parameters appended to the uri string and 
   with ? and no parameters appended to the uri string
 * GH#26 'http://localhost'.to_uri['foo/bar'] fails
 * GH#11 Handle gem dependencies using bundler
 * GH#22 Converts Uri to UriTemplate
 * GH#23 Supports extension of UriTemplate via #[]
 
== 1.0.0.beta2
 * GH#2 Make Components::Containers hash store a HashWithIndifferentAccess
 * GH#6 Net::HTTP based calls to Twitter public APIs fail
 * GH#5 Patron (curl) support failing for responses where headers have multiple values
 * GH#7 Build fails on Ruby 1.9
 * GH#16 Remove jeweler and use .gemspec direcly
 
== 1.0.0.beta1
 * If libxml-ruby isn't found but nokogiri, don't warn about libxml-ruby

== 1.0.0.beta0